Bug 254641 - current image not marked when selecting images with Ctrl-space
Summary: current image not marked when selecting images with Ctrl-space
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Thumbnail Viewer (other bugs)
Version First Reported In: 4.0 (KDE4)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-19 11:58 UTC by Gergö Letay
Modified: 2014-06-25 22:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gergö Letay 2010-10-19 11:58:14 UTC
Version:           4.0 (KDE4) (using KDE 4.4.2) 
OS:                Linux

Hi,

when selecting multiple images by moving around with cursor keys and marking them with ctrl-space, the focus of the current image is not displayed. So you are "navigating in the dark".

Reproducible: Always

Steps to Reproduce:
1) In thumbnail view move around with cursor keys. You can see the light blue frame moving around. Actually it seems to me that the light blue frame is used to label the selected images, and dark blue is used to label the current image. But ok at least I can recognize the current image.

2) now on an image press ctrl-space: the light blue frame disappears.
This is 
a) unintuitive as pressing Ctrl-space I would expect to select the current image and not deselecting it.

b) The current image is not visible anymore. keeping the ctrl key pressed and moving around with cursor keys to the next image to be selected the current image is not marked, so your are "navigating in the dark". even worse: if the mouse pointer happened to be over an image that image is marked as current image (dark blue frame) and does not move when pressing cursor keys, which is confusing.
Comment 1 Risto H. Kurppa 2012-03-01 21:18:09 UTC
GIT head version here and I see the same. Thanks for reporting!
Comment 2 Johannes Zarl-Zierl 2014-06-25 22:40:08 UTC
Git commit d409ba8147c347f54ed7e9143f5b211a739876f3 by Johannes Zarl.
Committed on 25/06/2014 at 22:39.
Pushed by johanneszarl into branch 'master'.

Highlight current index in Thumbnailview.

M  +2    -0    ThumbnailView/Delegate.cpp

http://commits.kde.org/kphotoalbum/d409ba8147c347f54ed7e9143f5b211a739876f3