Highlight current index in Thumbnailview.

BUG: 254641